--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -15,7 +15,7 @@ const defaultDescription = "Nikola Tesla was a Serbian-American inventor, electr
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title ?? defaultTitle}</title>
 		<meta name="description" content={description ?? defaultDescription} />
