--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,35 +1,36 @@
 ---
 import H1 from "../components/h1.astro";
 import InfoLayout from "../layouts/InfoLayout.astro";
+import ExternalLink from "../components/external-link.astro";
+
 ---
 
 <InfoLayout>
      <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-dvh flex flex-col justify-between gap-32">
           <div class="space-y-4 sm:space-y-12">
-               <H1> Get to know Nikola </H1>
+               <H1> About </H1>
 
                <p class="text-xl xl:text-2xl text-zinc-500 text-balance">
-                    <a href="https://en.wikipedia.org/wiki/Nikola_Tesla" target="_blank" class="underline underline-offset-4 decoration-zinc-400 hover:text-zinc-50 hover:decoration-zinc-200">
-                         Nikola Tesla
-                    </a>
-                    (1856-1943) was a Serbian-American inventor, engineer, and futurist
-                    best known for his pioneering work in electricity and electromagnetism.
-                    His innovations laid the foundation for modern alternating current
-                    (AC) power systems and many technologies still in use today.
+                    
+                    我是<span class="text-white">孫睦桓</b></span>，目前就讀於國立臺灣師範大學圖文傳播學系碩士班，研究主題聚焦於 AI 與色彩生成模型。
+                    
+                    我的背景橫跨內容行銷、使用者研究與數位產品設計，熱愛觀察市場變化、理解使用者需求，並用技術與設計打造具影響力的解方。
                </p>
+               <ExternalLink href="https://milessun.my.canva.site/resume">Resume</ExternalLink>
+
           </div>
 
+
+
           <div class="space-y-2 text-base sm:text-lg">
-               <h2 class="px-4 text-zinc-400 underline underline-offset-4 decoration-zinc-500">Achievements</h2>
+               <h2 class="px-4 text-zinc-400 underline underline-offset-4 decoration-zinc-500">經歷</h2>
 
                <ul class="px-4 text-zinc-400 list-disc list-outside">
-                    <li>Alternating Current (AC) System</li>
-                    <li>Tesla Coil</li>
-                    <li>Induction Motor</li>
-                    <li>Wireless Transmission</li>
-                    <li>Radio and Remote Control</li>
-                    <li>Hydroelectric Power at Niagara Falls</li>
-                    <li>X-Ray Imaging</li>
+                    <li>Gogolook 內容行銷實習生</li>
+                    <li>NISSAN 校園大使</li>
+                    <li>MSI 校園大使</li>
+                    <li>Intel 校園大使</li>
+                    <li>Wreadit 校園大使</li>
                </ul>
           </div>
      </div>
