--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,15 +8,18 @@ import ExternalLink from "../components/external-link.astro";
      <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-dvh flex flex-col justify-between">
           
           <div>
-               <H1 >How I can help? </H1>
-               <p class="mt-4 md:mt-8 lg:mt-12 text-xl xl:text-2xl text-zinc-400 text-balance">
-                    Interested in working together?
-                    Get in touch for new projects and experiments.
-               </p>
+               <H1 >Contact Info</H1>
+                  <!-- Contact invitation message -->
+                 <!--
+                 <p class="mt-4 md:mt-8 lg:mt-12 text-xl xl:text-2xl text-zinc-400 text-balance">
+                          Interested in working together?
+                          Get in touch for new projects and experiments.
+                 </p>
+                 -->
 
                <div class="mt-6 sm:mt-12 flex flex-col gap-1">
-                    <a href="mailto:hello@nikola.com" class="mb-8 w-fit group flex items-center gap-1 text-base lg:text-xl text-zinc-400 hover:text-zinc-50">
-                         hello@nikola.com
+                    <a href="mailto:milessun0507@gmail.comm" class="mb-8 w-fit group flex items-center gap-1 text-base lg:text-xl text-zinc-400 hover:text-zinc-50">
+                         milessun0507@gmail.com
                          <svg xmlns="http://www.w3.org/2000/svg" class="-rotate-45 group-hover:rotate-0 transition-all duration-300 ease-in-out" width="24" height="24" viewBox="0 0 24 24">
                               <title>Arrow Icon</title>
                               <path fill="currentColor" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10" opacity=".5"/>
@@ -24,17 +27,15 @@ import ExternalLink from "../components/external-link.astro";
                          </svg>
                     </a>
 
-                    <ExternalLink href="https://x.com/intent/user?screen_name=ians_studio">Twitter</ExternalLink>
-                    <ExternalLink href="https://instagram.com/">Instagram</ExternalLink>
-                    <ExternalLink href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">YouTube</ExternalLink>
-                    <ExternalLink href="https://github.com/iann-mathaiya/nikola-tesla">GitHub</ExternalLink>
+                    <ExternalLink href="https://www.instagram.com/haha.amg/">Instagram</ExternalLink>
+                    <ExternalLink href="https://www.threads.com/@haha.amg">Threads</ExternalLink>
+                    <ExternalLink href="https://github.com/hahaamg">GitHub</ExternalLink>
                </div>
           </div>
 
           <div>
-               <p class="text-base text-zinc-500">481 8th Ave</p>
-               <p class="text-base text-zinc-500">New York, NY 10001</p>
-               <p class="text-base text-zinc-500">United States</p>
+               <p class="text-base text-zinc-500">台北市</p>
+               <p class="text-base text-zinc-500">台灣</p>
           </div>
      </div>
 </InfoLayout>
