--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,21 +23,21 @@ import AvailableForWork from "../components/available.astro";
 				/>
 			</div>
 
-			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-between z-10">
-				<div>
-					<H1 size="large"> Nikola <br /> Tesla </H1>
+			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-center items-center z-10">
+				<div class="flex justify-center items-center h-full">
+					<H1 size="large" class="text-center"> SUN, <br /> MU HUAN </H1>
 				</div>
 
 				<div>
 					<AvailableForWork className="py-4" />
 					<div class="mb-2 sm:mb-4 flex items-center justify-between">
 						<div class="flex items-center gap-4">
-							<Link href="#">Book a call</Link>
+							{/* <Link href="#">Book a call</Link> */}
 							<Link href="/projects" variant="secondary">View recent work</Link>
 						</div>
 
 						<Navigation client:load>
-							<Link href="/blog" variant="secondary">Blog</Link>
+							<Link href="/coming-soon" variant="secondary">Blog</Link>
 							<Link href="/about" variant="secondary">About</Link>
 							<Link href="/contact" variant="secondary">Contact</Link>
 						</Navigation>
