compress img to webp add web description

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ import ExternalLink from "../components/external-link.astro";
 
                <p class="text-xl xl:text-2xl text-zinc-500 text-balance">
                     
-                    我是<span class="text-white">孫睦桓</b></span>，目前就讀於國立臺灣師範大學圖文傳播學系碩士班，研究主題聚焦於 AI 與色彩生成模型。
+                    我是<span class="text-white">孫睦桓（Miles）</b></span>，目前就讀於國立臺灣師範大學圖文傳播學系碩士班，研究主題聚焦於 AI 與色彩生成模型。
                     
                     我的背景橫跨內容行銷、使用者研究與數位產品設計，熱愛觀察市場變化、理解使用者需求，並用技術與設計打造具影響力的解方。
                </p>
