--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,12 +3,12 @@ import { Image } from 'astro:assets';
 import H1 from "../components/h1.astro";
 import InfoLayout from "../layouts/InfoLayout.astro";
 import ProjectList from "../components/ProjectList";
-import kmileshowcover from "../assets/kmileshowcover.png";
-import n8ncover from "../assets/n8ncover.png";
-import ragcover from "../assets/ragcover.png";
-import weather_horoscopecover from "../assets/weather_horoscopecover.png";
-import metaversecover from "../assets/metaversecover.png";
-import eatbugscover from "../assets/eatbugscover.png";
+import kmileshowcover from "../assets/kmileshowcover.webp";
+import n8ncover from "../assets/n8ncover.webp";
+import ragcover from "../assets/ragcover.webp";
+import weather_horoscopecover from "../assets/weather_horoscopecover.webp";
+import metaversecover from "../assets/metaversecover.webp";
+import eatbugscover from "../assets/eatbugscover.webp";
 
 
 
