--- a/src/pages/projects/metaverse.astro
+++ b/src/pages/projects/metaverse.astro
@@ -1,6 +1,6 @@
 ---
 import InfoLayout from "../../layouts/InfoLayout.astro";
-import metaversepic from "../../assets/metaversepic.png";
+import metaversepic from "../../assets/metaversepic.webp";
 ---
 <InfoLayout>
   <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-dvh">
