--- a/src/pages/projects/kmileshow.astro
+++ b/src/pages/projects/kmileshow.astro
@@ -1,6 +1,6 @@
 ---
 import InfoLayout from "../../layouts/InfoLayout.astro";
-import kmileshowcompic from "../../assets/kmileshowcompic.png";
+import kmileshowcompic from "../../assets/kmileshowcompic.webp";
 ---
 <InfoLayout>
   <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-dvh">
