--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -24,7 +24,7 @@ const defaultDescription = "Sometimes I build things, sometimes I write things. 
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content={defaultTitle} />
 		<meta property="og:description" content={defaultDescription} />
-		<meta property="og:image" content="/social-image.jpg" />
+		<meta property="og:image" content="/social-image.webp" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@ const defaultDescription = "Sometimes I build things, sometimes I write things. 
 		<meta property="twitter:url" content="https://nikola.fluidinterfaces.com/" />
 		<meta name="twitter:title" content={defaultTitle} />
 		<meta name="twitter:description" content={defaultDescription} />
-		<meta name="twitter:image" content="/social-image.jpg" />
+		<meta name="twitter:image" content="/social-image.webp" />
 
 		<Font cssVariable="--font-geist" preload />
 		<ClientRouter />
