add Project  Lingodrop

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,6 +9,7 @@ import ragcover from "../assets/ragcover.webp";
 import weather_horoscopecover from "../assets/weather_horoscopecover.webp";
 import metaversecover from "../assets/metaversecover.webp";
 import eatbugscover from "../assets/eatbugscover.webp";
+import Lingodrop from "../assets/Lingodrop.webp"
 
 
 
@@ -39,6 +40,13 @@ const projects = [
           description: "打造 LINE Bot 一站式提供星座運勢、穿搭建議與天氣視覺化互動體驗。",
           image: weather_horoscopecover,
           link: "/projects/weather_horoscope",
+          category: "程式開發"
+     },
+     {
+          title: "LingoDrop｜個人化字典",
+          description: "一滴一字，累積你的語言力。隨手收藏遇見的詞彙與句子。",
+          image: Lingodrop,
+          link: "/projects/Lingodrop",
           category: "程式開發"
      },
      {
